[gd_scene load_steps=9 format=3 uid="uid://bdwsqjpvxe2y7"]

[ext_resource type="Script" path="res://World/card.gd" id="1_0skpq"]
[ext_resource type="Texture2D" uid="uid://c54m8c0s4cu53" path="res://Assets/Key cards/keycard_blue0.png" id="2_mwk4q"]
[ext_resource type="Texture2D" uid="uid://bcupf1rn352hs" path="res://Assets/Key cards/keycard_blue1.png" id="3_0dtvt"]
[ext_resource type="Texture2D" uid="uid://bax1wbydvcsat" path="res://Assets/Key cards/keycard_blue2.png" id="4_lyiac"]
[ext_resource type="Texture2D" uid="uid://bsotnhh7e2wu7" path="res://Assets/Key cards/keycard_blue3.png" id="5_kcy15"]
[ext_resource type="Texture2D" uid="uid://3o84tgrh8gpx" path="res://Assets/Key cards/keycard_blue4.png" id="6_8mgdr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wnjfb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mwk4q")
}, {
"duration": 1.0,
"texture": ExtResource("3_0dtvt")
}, {
"duration": 1.0,
"texture": ExtResource("4_lyiac")
}, {
"duration": 1.0,
"texture": ExtResource("5_kcy15")
}, {
"duration": 1.0,
"texture": ExtResource("6_8mgdr")
}],
"loop": true,
"name": &"blue_card_",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5iei"]
size = Vector2(104, 97)

[node name="Card" type="Area2D"]
script = ExtResource("1_0skpq")

[node name="blue_card" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_wnjfb")
animation = &"blue_card_"
frame_progress = 0.776569

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-2, 5.5)
shape = SubResource("RectangleShape2D_v5iei")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
